--- a/view/index.ejs
+++ b/view/index.ejs
@@ -28,8 +28,8 @@
 
         <label for="role">Role:</label>
         <select id="role" name="role">
-            <option value="secretary">User</option>
-            <option value="doctor">Admin</option>
+            <option id="userOption" value="secretary">User</option>
+            <option id="adminOption" value="doctor">Admin</option>
         </select><br>
 
         <button type="submit">Create User</button>
@@ -60,9 +60,9 @@
 
                 if (response.ok) {
                     const data = await response.json();
-                    alert('User created successfully: ' + data.userId);
+                    alert('User created successfully with ID: ' + data.userId);
                 } else {
-                    alert('Error creating user');
+                    alert('Error creating user: ' + response.statusText);
                 }
             } catch (error) {
                 console.error('Error:', error);
